@@ -83,11 +83,15 @@ importFrom(plyr,llply)
 importFrom(plyr,mdply)
 importFrom(plyr,rename)
 importFrom(qvalue,qvalue)
+importFrom(stats,formula)
 importFrom(stats4,plot)
 importFrom(tidyr,gather)
 importFrom(topGO,annFUN.gene2GO)
 importFrom(topGO,groupGOTerms)
 importFrom(topGO,showSigOfNodes)
+importFrom(utils,citation)
+importFrom(utils,installed.packages)
+importFrom(utils,stack)
 importMethodsFrom(AnnotationDbi,mappedkeys)
 importMethodsFrom(AnnotationDbi,mget)
 importMethodsFrom(DOSE,plot)
